--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+    "baseUrl": "./src/"
+  },
+  "exclude": ["node_modules", ".next"]
 }
