--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.7.0",
+    "locomotive-scroll": "^4.1.1",
+    "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^2.2.2",
+    "postcss": "^8.2.13",
+    "autoprefixer": "^10.2.6"
   }
 }
